# woodelf

./: .gitignore  LICENSE  LICENSE.txt  README.md  deploy_new_version.bash  pyproject.toml  requirements.txt
tests/: shared_fixtures_and_utils.py  test_cube_metric.py  test_decision_trees_ensemble.py  test_direct_computation.py  test_explainer.py  test_high_depth_woodelf.py  test_lts_algo.py  test_lts_polynomial_multiplication.py  test_lts_vectorized.py  test_parse_models.py  test_path_to_matrices.py  test_pdp.py  test_pdp_p2v.py  test_vectorized_linear_tree_shap.py  test_woodelf_against_shap.py  wdnfs.py
tests/resources/: IEEE-CIS_testset_sample.csv  IEEE-CIS_trainset_sample.csv  IEEE-CIS_xgboost_model.json  IEEE-CIS_xgboost_model_depth_16.json  IEEE-CIS_xgboost_model_depth_22.json  california_100.csv  hgb_model.joblib
woodelf/: __init__.py  cube_metric.py  decision_patterns.py  decision_trees_ensemble.py  direct_computation.py  explainer.py  high_depth_woodelf.py  lts_algo.py  lts_polynomial_multiplication.py  lts_vectorized.py  parse_models.py  path_to_matrices.py  pdp.py  simple_woodelf.py  timings.py  utils.py  vectorized_linear_tree_shap.py
woodelf/alternatives/: alternative_path_to_matrices.py
